src/test/deca/syntax/invalid/homemade/test/test_lex_inv_mot_reserve_extends.deca
// Description:
//    tests de programme incorrect lexicalement (extends)
//
// Resultats:
//    ligne 9 : Erreur token 
// Historique:
//    cree le 01/01/2023

class A exTends B {
    
}
